"""
Interface CLI para o cliente de m√∫sica streaming
Permite intera√ß√£o com as 4 tecnologias atrav√©s de menu interativo
"""

import asyncio
from music_streaming_client import MusicStreamingClient


class MusicStreamingCLI:
    """Interface de linha de comando para o cliente de m√∫sica"""

    def __init__(self):
        """Inicializar CLI"""
        self.client = MusicStreamingClient()
        self.running = True

    async def run(self) -> None:
        """Executar o menu principal"""
        print("\n" + "=" * 80)
        print("üéµ CLIENTE DE M√öSICA STREAMING - MODO INTERATIVO")
        print("=" * 80)

        while self.running:
            self._print_main_menu()
            choice = input("\nüëâ Escolha uma op√ß√£o: ").strip()

            if choice == "1":
                await self._technology_menu("REST")
            elif choice == "2":
                await self._technology_menu("GraphQL")
            elif choice == "3":
                await self._technology_menu("SOAP")
            elif choice == "4":
                await self._technology_menu("gRPC")
            elif choice == "5":
                await self._health_check()
            elif choice == "6":
                await self._compare_technologies()
            elif choice == "0":
                self._exit()
            else:
                print("\n‚ùå Op√ß√£o inv√°lida!")

    def _print_main_menu(self) -> None:
        """Imprimir menu principal"""
        print("\n" + "-" * 80)
        print("MENU PRINCIPAL\n")
        print("1Ô∏è‚É£  Usar REST")
        print("2Ô∏è‚É£  Usar GraphQL")
        print("3Ô∏è‚É£  Usar SOAP")
        print("4Ô∏è‚É£  Usar gRPC")
        print("5Ô∏è‚É£  Health Check")
        print("6Ô∏è‚É£  Comparar Tecnologias")
        print("0Ô∏è‚É£  Sair")
        print("-" * 80)

    async def _technology_menu(self, technology: str) -> None:
        """Menu para opera√ß√µes de uma tecnologia espec√≠fica"""
        while True:
            print(f"\n{'=' * 80}")
            print(f"üåê MENU - {technology.upper()}")
            print("=" * 80)
            print("\n1Ô∏è‚É£  Listar todos os usu√°rios")
            print("2Ô∏è‚É£  Listar todas as m√∫sicas")
            print("3Ô∏è‚É£  Listar playlists do usu√°rio")
            print("4Ô∏è‚É£  Listar m√∫sicas da playlist")
            print("5Ô∏è‚É£  Listar playlists com m√∫sica")
            print("0Ô∏è‚É£  Voltar")
            print("-" * 80)

            choice = input(f"\nüëâ Escolha uma opera√ß√£o {technology}: ").strip()

            if choice == "1":
                await self._list_all_users(technology)
            elif choice == "2":
                await self._list_all_musics(technology)
            elif choice == "3":
                await self._list_user_playlists(technology)
            elif choice == "4":
                await self._list_playlist_musics(technology)
            elif choice == "5":
                await self._list_playlists_by_music(technology)
            elif choice == "0":
                break
            else:
                print("\n‚ùå Op√ß√£o inv√°lida!")

    async def _list_all_users(self, technology: str) -> None:
        """Listar todos os usu√°rios"""
        try:
            print(f"\n‚è≥ Buscando usu√°rios com {technology}...")
            if technology == "REST":
                users = await self.client.rest_list_all_users()
            elif technology == "GraphQL":
                users = await self.client.graphql_list_all_users()
            elif technology == "SOAP":
                users = await self.client.soap_list_all_users()
            elif technology == "gRPC":
                users = await self.client.grpc_list_all_users()

            print(f"\n‚úÖ {len(users)} usu√°rios encontrados:\n")
            for user in users:
                print(f"   ID: {user.id:3} | Nome: {user.name:20} | Idade: {user.age}")

        except Exception as error:
            print(f"\n‚ùå Erro: {error}")

    async def _list_all_musics(self, technology: str) -> None:
        """Listar todas as m√∫sicas"""
        try:
            print(f"\n‚è≥ Buscando m√∫sicas com {technology}...")
            if technology == "REST":
                musics = await self.client.rest_list_all_musics()
            elif technology == "GraphQL":
                musics = await self.client.graphql_list_all_musics()
            elif technology == "SOAP":
                musics = await self.client.soap_list_all_musics()
            elif technology == "gRPC":
                musics = await self.client.grpc_list_all_musics()

            print(f"\n‚úÖ {len(musics)} m√∫sicas encontradas:\n")
            for music in musics:
                print(f"   ID: {music.id:3} | Nome: {music.name:25} | Artista: {music.artist}")

        except Exception as error:
            print(f"\n‚ùå Erro: {error}")

    async def _list_user_playlists(self, technology: str) -> None:
        """Listar playlists de um usu√°rio"""
        try:
            user_id = int(input("\nüëâ Digite o ID do usu√°rio: "))
            print(f"\n‚è≥ Buscando playlists do usu√°rio {user_id} com {technology}...")

            if technology == "REST":
                playlists = await self.client.rest_list_user_playlists(user_id)
            elif technology == "GraphQL":
                playlists = await self.client.graphql_list_user_playlists(user_id)
            elif technology == "SOAP":
                playlists = await self.client.soap_list_user_playlists(user_id)
            elif technology == "gRPC":
                playlists = await self.client.grpc_list_user_playlists(user_id)

            print(f"\n‚úÖ {len(playlists)} playlists encontradas:\n")
            for playlist in playlists:
                print(f"   ID: {playlist.id:3} | Nome: {playlist.name}")

        except ValueError:
            print("\n‚ùå ID inv√°lido!")
        except Exception as error:
            print(f"\n‚ùå Erro: {error}")

    async def _list_playlist_musics(self, technology: str) -> None:
        """Listar m√∫sicas de uma playlist"""
        try:
            playlist_id = int(input("\nüëâ Digite o ID da playlist: "))
            print(f"\n‚è≥ Buscando m√∫sicas da playlist {playlist_id} com {technology}...")

            if technology == "REST":
                musics = await self.client.rest_list_playlist_musics(playlist_id)
            elif technology == "GraphQL":
                musics = await self.client.graphql_list_playlist_musics(playlist_id)
            elif technology == "SOAP":
                musics = await self.client.soap_list_playlist_musics(playlist_id)
            elif technology == "gRPC":
                musics = await self.client.grpc_list_playlist_musics(playlist_id)

            print(f"\n‚úÖ {len(musics)} m√∫sicas encontradas:\n")
            for music in musics:
                print(f"   ID: {music.id:3} | Nome: {music.name:25} | Artista: {music.artist}")

        except ValueError:
            print("\n‚ùå ID inv√°lido!")
        except Exception as error:
            print(f"\n‚ùå Erro: {error}")

    async def _list_playlists_by_music(self, technology: str) -> None:
        """Listar playlists que cont√™m uma m√∫sica"""
        try:
            music_id = int(input("\nüëâ Digite o ID da m√∫sica: "))
            print(f"\n‚è≥ Buscando playlists com a m√∫sica {music_id} usando {technology}...")

            if technology == "REST":
                playlists = await self.client.rest_list_playlists_by_music(music_id)
            elif technology == "GraphQL":
                playlists = await self.client.graphql_list_playlists_by_music(music_id)
            elif technology == "SOAP":
                playlists = await self.client.soap_list_playlists_by_music(music_id)
            elif technology == "gRPC":
                playlists = await self.client.grpc_list_playlists_by_music(music_id)

            print(f"\n‚úÖ {len(playlists)} playlists encontradas:\n")
            for playlist in playlists:
                print(f"   ID: {playlist.id:3} | Nome: {playlist.name}")

        except ValueError:
            print("\n‚ùå ID inv√°lido!")
        except Exception as error:
            print(f"\n‚ùå Erro: {error}")

    async def _health_check(self) -> None:
        """Executar health check"""
        try:
            print("\n‚è≥ Verificando sa√∫de dos endpoints...")
            await self.client.health_check()
            print("\n‚úÖ Todos os endpoints est√£o respondendo corretamente!")
            print("   - REST: OK")
            print("   - GraphQL: OK")
            print("   - SOAP: OK")
            print("   - gRPC: OK")

        except Exception as error:
            print(f"\n‚ùå Erro ao verificar sa√∫de: {error}")

    async def _compare_technologies(self) -> None:
        """Comparar performance das tecnologias"""
        try:
            import time

            print("\n‚è≥ Comparando performance das tecnologias...")
            print("   Executando 10 requisi√ß√µes para cada tecnologia...\n")

            technologies = {
                "REST": [
                    self.client.rest_list_all_users,
                    self.client.rest_list_all_musics,
                    self.client.rest_list_user_playlists,
                ],
                "GraphQL": [
                    self.client.graphql_list_all_users,
                    self.client.graphql_list_all_musics,
                    self.client.graphql_list_user_playlists,
                ],
                "SOAP": [
                    self.client.soap_list_all_users,
                    self.client.soap_list_all_musics,
                    self.client.soap_list_user_playlists,
                ],
                "gRPC": [
                    self.client.grpc_list_all_users,
                    self.client.grpc_list_all_musics,
                    self.client.grpc_list_user_playlists,
                ],
            }

            results = {}

            for tech_name, methods in technologies.items():
                times = []
                for method in methods:
                    start = time.time()
                    try:
                        await method(1) if "playlists" in method.__name__ else await method()
                        elapsed = (time.time() - start) * 1000
                        times.append(elapsed)
                    except Exception as e:
                        print(f"   ‚ö†Ô∏è  {tech_name}: {e}")

                if times:
                    avg_time = sum(times) / len(times)
                    results[tech_name] = avg_time
                    print(f"   {tech_name:12} | Tempo m√©dio: {avg_time:.2f}ms")

            # Encontrar mais r√°pido
            if results:
                fastest = min(results.items(), key=lambda x: x[1])
                print(f"\nüèÜ Tecnologia mais r√°pida: {fastest[0]} ({fastest[1]:.2f}ms)")

        except Exception as error:
            print(f"\n‚ùå Erro ao comparar: {error}")

    def _exit(self) -> None:
        """Sair do programa"""
        self.running = False
        print("\n" + "=" * 80)
        print("üëã At√© logo!")
        print("=" * 80 + "\n")


async def main():
    """Fun√ß√£o principal"""
    cli = MusicStreamingCLI()
    await cli.run()


if __name__ == "__main__":
    try:
        asyncio.run(main())
    except KeyboardInterrupt:
        print("\n\n‚ö†Ô∏è  Programa interrompido pelo usu√°rio")
